--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                             style="background-image: url('./img/TapaBoca.jpg'); border-top-left-radius: 5px; border-top-right-radius: 5px;">
                         </div>
                         <div class="card-body">
-                            <h5 class="card-title">Acontecimentos</h5>
+                            <h5 class="card-title">Principais Figuras</h5>
                         </div>
                     </div>
                 </div>
@@ -190,7 +190,7 @@
                             style="background-image: url('./img/amanhavaiseamabosta.png'); border-top-left-radius: 5px; border-top-right-radius: 5px;">
                         </div>
                         <div class="card-body">
-                            <h5 class="card-title">Cultura</h5>
+                            <h5 class="card-title">Movimentos</h5>
                         </div>
                     </div>
                 </div>
@@ -199,12 +199,9 @@
         </section>
     </main>
 
-    <footer style="
-        display: flex; 
-        justify-content: center; 
-        align-items: center;">
-        <p>&copy; all rights reserved</p>
-        <p>&nbsp; 2024</p>
+    <footer>
+        <p>&copy; all rights reserved &nbsp; 2024</p>
+        <p>Samuel nº32 | Emanuelly nº9 | Enzo nº10 | Cesar nº7</p>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
